--- a/bootkernel/kernel/RaspberryPi4.config
+++ b/bootkernel/kernel/RaspberryPi4.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.10.31 Kernel Configuration
+# Linux/arm64 5.10.39 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (crosstool-NG 1.24.0) 8.3.0"
 CONFIG_CC_IS_GCC=y
@@ -369,6 +369,7 @@ CONFIG_ARM64_TAGGED_ADDR_ABI=y
 #
 CONFIG_ARM64_HW_AFDBM=y
 CONFIG_ARM64_PAN=y
+CONFIG_AS_HAS_LSE_ATOMICS=y
 CONFIG_ARM64_VHE=y
 # end of ARMv8.1 architectural features
 
@@ -1986,6 +1987,7 @@ CONFIG_POWER_RESET_GPIO=y
 # CONFIG_NVMEM_REBOOT_MODE is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
+CONFIG_RPI_POE_POWER=y
 # CONFIG_PDA_POWER is not set
 # CONFIG_GENERIC_ADC_BATTERY is not set
 # CONFIG_TEST_POWER is not set
@@ -2962,7 +2964,6 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_AD7923 is not set
 # CONFIG_AD7949 is not set
 # CONFIG_AD799X is not set
-# CONFIG_AD9467 is not set
 # CONFIG_ADI_AXI_ADC is not set
 # CONFIG_ENVELOPE_DETECTOR is not set
 # CONFIG_HI8435 is not set
