--- a/bootkernel/kernel/BeagleBone.config
+++ b/bootkernel/kernel/BeagleBone.config
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: arm-linux-gnueabihf-gcc (crosstool-NG 1.24.0.506_5a4c95d) 10.3.0
+# Compiler: arm-linux-gnueabihf-gcc (crosstool-NG 1.25.0_rc1.2_6cd1663) 10.3.0
 #
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=100300
