--- a/bootkernel/kernel/RaspberryPi2.config
+++ b/bootkernel/kernel/RaspberryPi2.config
@@ -2,10 +2,10 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 5.10.95 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="arm-linux-gnueabihf-gcc (crosstool-NG 1.24.0.506_5a4c95d) 10.3.0"
+CONFIG_CC_VERSION_TEXT="arm-linux-gnueabihf-gcc (crosstool-NG 1.25.0_rc1.2_6cd1663) 10.3.0"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=100300
-CONFIG_LD_VERSION=232000000
+CONFIG_LD_VERSION=238000000
 CONFIG_CLANG_VERSION=0
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
