--- a/toolchain/common/Makefile
+++ b/toolchain/common/Makefile
@@ -50,6 +50,7 @@ $(PKGDIR):
 	cp -R -P -p $(MUNTSOS)/examples		$(PKGDIR)/usr/local/share/muntsos
 	cp -R -P -p $(MUNTSOS)/include		$(PKGDIR)/usr/local/share/muntsos
 	cp $(MUNTSOS)/COPYING			$(PKGDIR)/usr/local/share/muntsos/doc
+	rm -rf					$(PKGDIR)/usr/local/share/muntsos/doc/.blinky
 	rm -rf					$(PKGDIR)/usr/local/share/muntsos/doc/.rawhid
 	rm -rf					$(PKGDIR)/usr/local/share/muntsos/examples/README.*
 	rm -rf					$(PKGDIR)/usr/local/share/muntsos/examples/firmware
