--- a/examples/csharp/programs/test_hid_button_led/test_hid_button_led.csproj
+++ b/examples/csharp/programs/test_hid_button_led/test_hid_button_led.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <!-- Disable internationalization to eliminate requirement for iconv -->
