--- a/bootkernel/kernel/RaspberryPi3Gadget.config
+++ b/bootkernel/kernel/RaspberryPi3Gadget.config
@@ -434,7 +434,7 @@ CONFIG_STACKPROTECTOR_PER_TASK=y
 #
 # Boot options
 #
-CONFIG_CMDLINE=""
+CONFIG_CMDLINE="console=tty1 OPTIONS=0x012C"
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
